[tool.poetry]
name = "ynab-integrations-consumer"
version = "0.1.0"
description = ""
authors = ["Gerald Lau <gerald.lau.95@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.9.9"
python-dotenv = "^0.20.0"
pip = "^22.2.2"
install = "^1.3.5"
ynab-api = {git = "https://github.com/dmlerner/ynab-api.git", rev = "nullfix"}
pydantic = "^1.10.1"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
